--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -62,6 +62,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" th:href="@{/vendorSubmit}">Vendor Submit</a></li>
                 <li><a class="dropdown-item" th:href="@{/vendorView}">Vendors</a></li>
+                <li><a class="dropdown-item" th:href="@{/statsView}">View Company Stats</a></li>
                 <li><a class="dropdown-item" th:href="@{/warrantyDivisionSubmit}">Warranty Division Submit</a></li>
                 <li><a class="dropdown-item" th:href="@{/warrantyDivisionView}">Warranty Divisions</a></li>
               </ul>
