okay added deletion for workorders, and made it cascade properly

--- a/src/main/resources/templates/staffView.html
+++ b/src/main/resources/templates/staffView.html
@@ -41,8 +41,8 @@
     <h1 style="font-weight: bolder;">View Staff Members</h1><br>
     <p1>
     <br>
-    <div>hideFullyCertified: <input type="checkbox" onclick="updatefilters()" id="hideuncertified"></div>
-    <div>hideUncertified: <input type="checkbox" onclick="updatefilters()" id="hidecertified"></div>
+    <div>hideUncertified: <input type="checkbox" onclick="updatefilters()" id="hideuncertified"></div>
+    <div>hideFullyCertified: <input type="checkbox" onclick="updatefilters()" id="hidecertified"></div>
     <table id="VendorsViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
         <th class="header-name"> Staff ID</th>
