some html page naming

--- a/src/main/resources/templates/partView.html
+++ b/src/main/resources/templates/partView.html
@@ -33,12 +33,12 @@
     }
   </style>
 
-  <title>View Customers</title>
+  <title>View Parts</title>
 </head>
 
 <body style="font-family: Quicksand, sans-serif;">
   <div class="db-container">
-    <h1 style="font-weight: bolder;">View Customers</h1><br>
+    <h1 style="font-weight: bolder;">View Parts</h1><br>
 
     <p1>
     <br>
