--- a/src/main/resources/templates/statsview.html
+++ b/src/main/resources/templates/statsview.html
@@ -33,12 +33,12 @@
     }
   </style>
 
-  <title>View Staff Members</title>
+  <title>View Company Stats</title>
 </head>
 
 <body style="font-family: Quicksand, sans-serif;">
   <div class="db-container">
-    <h1 style="font-weight: bolder;">View Staff Members</h1><br>
+    <h1 style="font-weight: bolder;">View Company Stats</h1><br>
     <p1>
     <br>
     <table id="VendorsViewTable"class="styled-table">
