oooh this is the actual last one, sorry

--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -67,7 +67,7 @@
                 <li><a class="dropdown-item" th:href="@{/warrantyDivisionView}">Warranty Divisions</a></li>
               </ul>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" hidden>
               <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" th:href="@{/ResetDatabase}" aria-expanded="false">
                 Reinitialize Database
               </a>
