--- a/src/main/resources/templates/toolusageReportSubmit.html
+++ b/src/main/resources/templates/toolusageReportSubmit.html
@@ -31,7 +31,7 @@
           <option th:each="tool : ${Tools}" th:value="${tool.ToolID}" th:text="${tool.ToolName}"></option>
         </select>
       </div>
-      <button th:onclick="|window.location.href='/toolSubmit'|" class="SubmitButton">Submit a Tool</button>
+      <a th:href="@{/toolSubmit}">Submit Tool</a>
       <div class="form-name" style="font-weight: bolder;">Choose an Active Repair for this report: 
       <select th:field="*{RepairID}">
         <option th:each="order : ${openWorkOrders}" th:value="${order.OrderNum}" th:text="${order.Description}"></option>
